--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
@@ -171,7 +171,7 @@
 
                             <img class="icon rounded-circle" src="~/images/user-img.png">
 
-                            @Username  <span id="user-id"> @Id </span>
+                            @Username  <span id="user-id d-none"> @Id </span>
                             <img src="~/images/drop-down.png">
                         </a>
                         <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDarkDropdownMenuLink">
